Tease apart refactor so that Toasts are containing element in charge of teleporting and fixed positioning. Its children are 1 to many Toast component elements that wrap Alerts. Now supports stacking toasts.

--- a/agnostic-react/src/alert.module.css
+++ b/agnostic-react/src/alert.module.css
@@ -55,3 +55,7 @@
 .alertBorderRight {
   composes: alert-border-right from './alert.css';
 }
+
+.toastShadow {
+  composes: alert-toast-shadow from './alert.css';
+}
